Fix handling of broken links

QFileInfo::exists returns false for broken links

BUG:466241
FIXED-IN:1.10.1
(cherry picked from commit 2b3645b8aef912f92d4a7c034141e1ef00fd22ed)